--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^8.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
