--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-hook-form": "^7.69.0",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0"
   },
