--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.561.0",
     "next": "^16.1.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.71.1",
